refactor(ai): merge SpeechAIService into AIService
GeminiService was the only implementation of both interfaces anyway;
one AI contract with generateContent + synthesizeSpeechWav is simpler
than two. Updates ListeningPracticeGenerationService to call the single
AIService bean for both text and voice generation.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>